--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+
 <div class="notes-container">
     <div *ngFor="let note of notes" class="note-card">
         <h2>{{ note.title }}</h2>
@@ -6,4 +7,13 @@
         <div class="tags">Tags: {{ note.tags }}</div>
     </div>
     </div>
-    
+
+
+
+
+
+
+
+
+
+<router-outlet></router-outlet>
