--- a/src/app/notes/create/create.component.html
+++ b/src/app/notes/create/create.component.html
@@ -55,14 +55,31 @@
           </div>
         </div>
   
-        <div class="d-flex justify-content-between">
-          <button type="submit" class="btn btn-primary" [disabled]="noteForm.invalid">Save</button>
-          <button (click)="updatenotes()" class="btn btn-outline-secondary">Update</button>
-  
-          <button type="button" (click)="noteForm.reset()" class="btn btn-outline-secondary">Cancel</button>
+        <div class="d-flex">
+          <!-- Save Button -->
+          <button type="button" class="btn btn-success" 
+                  [disabled]="noteForm.invalid || isLoading"
+                  (click)="confirmAction('save')">
+            {{ isLoading ? 'Saving...' : 'Save' }}
+          </button>
+        
+          <!-- Update Button -->
+          <button type="button" class="btn btn-danger" (click)="confirmAction('update')">
+            Update
+          </button>
+        
+          <!-- Cancel Button -->
+          <button type="button" class="btn btn-warning" (click)="confirmAction('cancel')">
+            Cancel
+          </button>
         </div>
+        
+        
   
       </form>
+      <div *ngIf="errorMessage" class="alert alert-danger">
+        {{ errorMessage }}
+      </div>
     </div>
   </div>
   
