--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,35 +1,38 @@
 <div class="login-container">
-<div class="login-form">
-    <h2>Login your account</h2>
+    <div class="login-form">
+        <h2>Login your account</h2>
+        
+        <form (ngSubmit)="login()">
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input
+            [(ngModel)]="email"
+            type="email"
+            id="email"
+            class="form-control"
+            name="email"
+            placeholder="Enter your email"
+            required />
+        </div>
     
-    <form (ngSubmit)="onSubmit()">
-    <div class="form-group">
-        <label for="email">Email</label>
-        <input
-        type="email"
-        id="email"
-        class="form-control"
-        name="email"
-        placeholder="Enter your email"
-        required />
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input
+            [(ngModel)]="password"
+            type="password"
+            id="password"
+            class="form-control"
+            name="password"
+            placeholder="Enter your password"
+            required />
+        </div>
+    
+        <div class="button-group">
+            <button type="submit" class="btn login-btn">Login</button>
+            <h3>Don't have an account yet?</h3>
+            <button type="button" class="btn signup-btn">Sign Up</button>
+        </div>
+        </form>
+        <p *ngIf="error" style="color:red">{{ error }}</p>
+    
     </div>
-
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input
-        type="password"
-        id="password"
-        class="form-control"
-        name="password"
-        placeholder="Enter your password"
-        required />
-    </div>
-
-    <div class="button-group">
-        <button type="submit" class="btn login-btn">Login</button>
-        <h3>Don't have an account yet?</h3>
-        <button type="button" class="btn signup-btn" (click)="onSignup()">Sign Up</button>
-    </div>
-    </form>
-</div>
-</div>
