--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,5 +1,6 @@
-
 <h1>Welcome ..............</h1>
+<h2>Your Notes</h2>
+
 <div class="notes-container">
     <div *ngFor="let note of notes" class="note-card">
         <h2>{{ note.title }}</h2>
